fixed navBar z-index

--- a/src/components/UI/molecules/styles/navBar.scss
+++ b/src/components/UI/molecules/styles/navBar.scss
@@ -33,6 +33,7 @@
   background-color: $sec_blue_dark;
   height: 100vh;
   width: 80vw;
+  z-index: 2;
 
   position: fixed;
   right: 0;
@@ -82,5 +83,6 @@
     width: auto;
     margin-top: 40px;
     margin-right: 165px;
+    z-index: inherit;
   }
 }
